samples/_failures_safe/1761372920_5e52c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9fec235f.c: In function ‘main’:
./samples/SAFE/__tmp_9fec235f.c:180:12: error: missing terminating " character
  180 |     printf("Enter input to
      |            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9fec235f.c:180:5: error: expected expression at end of input
  180 |     printf("Enter input to
      |     ^~~~~~
./samples/SAFE/__tmp_9fec235f.c:180:5: error: expected declaration or statement at end of input
